chore(ci): migrate 'performance-large-dataset' job to CI3
related to #SRE-156